# local-file-search

./: .gitignore  METHODOLOGY.md  README.md  build.sh  feature_list.json  init.sh  progress.txt  pyproject.toml  requirements.txt
_archive_v1/: FAQ.md  README.md  build.bat  build.spec  build_en.spec  build_kr.spec  packaging_guide.md  requirements.txt  settings.json
_archive_v1/src/: config.py  indexer.py  main.py  main_en.py  main_kr.py  search_engine.py  system_profile.py  ui.py
_archive_v1/src/api/: __init__.py  auth.py  routes.py  server.py
_archive_v1/src/audit/: __init__.py  logger.py
_archive_v1/src/connectors/: __init__.py  base.py  graph.py  local.py  onedrive.py  outlook.py  sharepoint.py
docs/: BUSINESS_STRATEGY.md  Master_Plan_v2.0_Phase-1.md  Master_Plan_v2.0_Phase-2.md  Master_Plan_v2.0_Phase-3.md  Master_Plan_v2.0_Phase-4.md  Master_Plan_v2.0_Phase-5.md  Master_Plan_v2.0_Phase-6.md  Master_Plan_v2.0_Phase-7.md  PRD.md  PRODUCT_STRATEGY.md
src/: __init__.py
src/app/: __init__.py  main.py
src/config/: __init__.py  paths.py  settings.py
src/connectors/: __init__.py  onedrive.py  outlook.py
src/core/: __init__.py  chunker.py  embedding.py  file_classifier.py  file_enumerator.py  indexer.py  schemas.py  search_engine.py  tokenizer.py
src/security/: __init__.py  audit.py  license.py  pii_masking.py
src/storage/: __init__.py  bm25_store.py  lancedb_store.py  manifest.py  vector_store.py
src/ui/: __init__.py  about_page.py  indexing_page.py  main_window.py  mypage.py  search_page.py  setup_wizard.py
tests/: __init__.py
(+24 files in other folders)
