[project]
name = "local-finder-x"
version = "2.0.0"
description = "Explainable Hybrid Local Search Engine for MS Office Documents"
readme = "docs/README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # UI
    "PyQt6>=6.5.0",
    
    # Embedding & NLP
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "kiwipiepy>=0.17.0",
    
    # Storage
    "lancedb>=0.4.0",
    "pyarrow>=14.0.0",
    "rank-bm25>=0.2.2",
    
    # Document Parsing
    "python-docx>=0.8.11",
    "python-pptx>=0.6.21",
    "openpyxl>=3.1.0",
    "pypdf2>=3.0.0",
    
    # MS Graph API (Pro)
    "msal>=1.24.0",
    "requests>=2.31.0",
    
    # Utilities
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
